force-app/main/default/objects/Weather_Condition__mdt/Weather_Condition__mdt.object-meta.xml
<CustomObject>
    <label>Weather Condition</label>
    <pluralLabel>Weather Conditions</pluralLabel>
</CustomObject>