force-app/main/default/objects/Weather_Condition__mdt/fields/Icon_Url__c.field-meta.xml
<CustomField>
    <fullName>Icon_Url__c</fullName>
    <label>Icon_Url</label>
    <type>Url</type>
</CustomField>