force-app/main/default/objects/Weather_Condition__mdt/fields/Label_EN__c.field-meta.xml
<CustomField>
    <fullName>Label_EN__c</fullName>
    <label>Label_EN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>