force-app/main/default/objects/Weather_Condition__mdt/fields/Label_FR__c.field-meta.xml
<CustomField>
    <fullName>Label_FR__c</fullName>
    <label>Label_FR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>